tests/snapshots/examples_fixtures/diagnostics_demos__errors__wrong_arguments.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/wrong_arguments.flx
== compile ==
failed (compile)
== diagnostics ==
error[E056]: Wrong Number Of Arguments

The `substring` function takes 3 arguments, but 2 were provided.

  examples/diagnostics_demos/errors/wrong_arguments.flx:7:14
  |
7 | let result = substring("hello", 0)
  |              ^^^^^^^^^^^^^^^^^^^^^
  |              --------------------- 2 arguments provided here, expected 3

Help:
  Add 1 missing argument(s), for example: `substring(arg1, arg2, arg3)`.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/diagnostics_demos/errors/wrong_arguments.flx:8:1
  |
8 | print(result)
  | ^^^^^^^^^^^^^
  | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/diagnostics_demos/errors/wrong_arguments.flx:8:1
  |
8 | print(result)
  | ^^^^^^^^^^^^^
  | ------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
